--- a/package.json
+++ b/package.json
@@ -12,16 +12,19 @@
     "@types/react-dom": "^17.0.11",
     "express": "^4.17.1",
     "express-favicon": "^2.0.1",
+    "node-sass": "^4.14.1",
     "path": "^0.12.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "sass": "^1.45.0",
+    "sass-loader": "^12.4.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.2",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
